# Argos

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  opencode.json  tauri.conf.json
.github/workflows/: ci.yml  release.yml
.opencode/agent/: algorithm-verifier.md  forensics-validator.md  perf-auditor.md  rust-reviewer.md  security-reviewer.md  tauri-bridge-reviewer.md
.opencode/command/: audit-perf.md  review.md  safety-check.md  verify-algo.md
.opencode/instructions/: algorithms-spec.md  forensics-rules.md  rust-style.md  security-baseline.md  tauri-patterns.md
benches/: carving_bench.rs  format_bench.rs  hdd_pup.rs  io_bench.rs  jpeg_validate.rs  png_validate.rs  ssd_scan.rs
crates/argos_app/: Cargo.toml
crates/argos_app/src/: device_discovery.rs  engine.rs  main.rs  recovery.rs  signature_index.rs
crates/argos_core/: Cargo.toml
crates/argos_core/src/: aligned_buffer.rs  carving.rs  error.rs  io.rs  jpeg.rs  lib.rs  matching.rs  png.rs  scanners.rs  statistics.rs  traits.rs  types.rs  validation.rs
crates/argos_core/src/carving/: mod.rs  smart.rs
crates/argos_core/src/io/: disk.rs  mmap.rs  mod.rs
crates/argos_core/src/jpeg/: huffman.rs  mod.rs  parser.rs  restart.rs  validator.rs
crates/argos_core/src/png/: mod.rs  parser.rs  validator.rs
crates/argos_core/src/statistics/: mod.rs
crates/argos_core/tests/: fragmentation_tests.rs
crates/argos_io/: Cargo.toml
crates/argos_io/src/: lib.rs  mmap_reader.rs  reader.rs
crates/scav_app/: Cargo.toml
crates/scav_app/src/: device_discovery.rs  engine.rs  main.rs  recovery.rs
crates/scav_core/: Cargo.toml
crates/scav_core/src/: error.rs  lib.rs  scanners.rs  traits.rs  types.rs
crates/scav_io/: Cargo.toml
crates/scav_io/src/: lib.rs  reader.rs
docs/: architecture.md  project-structure.md  threat-model.md
docs/algorithms/: aho-corasick.md  huffman-validation.md  pup.md  sht-wald.md
docs/decisions/: 0001-rust-tauri.md  0002-single-crate-modules.md  0003-pup-sht-hdd.md  0004-aho-corasick-ssd.md  0005-no-comments-policy.md  0006-no-duplication-no-dead-code.md  0007-memmap2-hdd.md  0008-same-device-warning.md  0009-privilege-elevation.md  0010-structural-jpeg-validation.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  main.tsx  styles.css
frontend/src/components/: Background.tsx  BottomBanner.tsx  CircularProgress.tsx  DevicePicker.tsx  ErrorModal.tsx  Glass.tsx  IntegrityFooter.tsx  MetricCard.tsx  OutputPicker.tsx  ProgressView.tsx  RecoveryPanel.jsx  RecoveryPanel.tsx  StatusPanel.tsx  WarningBanner.tsx  icons.tsx
frontend/src/hooks/: useRecovery.js  useRecovery.ts
frontend/src/lib/: bridge.ts  format.ts  recovery.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_entropy.rs  fuzz_jpeg.rs  fuzz_jpeg_validate.rs  fuzz_png.rs  fuzz_png_validate.rs  fuzz_scan_block.rs  fuzz_ssd_scan.rs
icons/: icon.icns
proptest-regressions/carve/hdd/: pup.txt
resources/: argos.desktop
resources/linux/: com.argos.policy
resources/windows/: Argos.manifest
scripts/: postinst.sh
src/: analysis.rs  carving.rs  cli.rs  devices.rs  error.rs  extraction.rs  io.rs  lib.rs  logging.rs  main.rs  reassembly.rs  types.rs
src/application/: mod.rs  recover_files.rs  scan_device.rs
src/application/dto/: mod.rs  recovery_result.rs  scan_options.rs
src/bridge/: commands.rs  devices.rs  mod.rs  runner.rs
src/carve/: mod.rs
src/carve/hdd/: mod.rs  pup.rs  sht.rs
src/carve/ssd/: mod.rs  patterns.rs
src/core/: device.rs  error.rs  io.rs  mod.rs  scoring.rs  traits.rs  types.rs
src/custody/: mod.rs
src/device/: mod.rs
src/domain/: mod.rs
src/domain/entities/: file_signature.rs  mod.rs  recovered_file.rs  scan_result.rs
src/domain/repositories/: block_device.rs  file_system.rs  file_writer.rs  mod.rs
src/domain/services/: carver.rs  mod.rs  signature_registry.rs
src/elevation/: linux.rs  mod.rs  windows.rs
src/extraction/: mod.rs
src/format/: jpeg.rs  mod.rs  png.rs
src/formats/: jpeg.rs  mod.rs  png.rs
src/fs/: ext4.rs  fat32.rs  mod.rs  ntfs.rs
src/fs/btrfs/: reader.rs  structs.rs
src/fs/ext4/: mod.rs  reader.rs  superblock.rs
src/infrastructure/: mod.rs
src/infrastructure/block_device/: linux_block_device.rs  mmap_block_device.rs  mod.rs
src/infrastructure/carvers/: image_carver.rs  mod.rs
src/infrastructure/carvers/signatures/: mod.rs
src/infrastructure/file_systems/: mod.rs
src/infrastructure/file_systems/btrfs/: mod.rs  parser.rs
src/infrastructure/file_systems/ext4/: mod.rs  parser.rs
src/infrastructure/file_systems/ntfs/: mod.rs  parser.rs
src/infrastructure/file_systems/raw/: mod.rs
src/infrastructure/persistence/: local_file_writer.rs  mod.rs
src/io/: buffer.rs  mod.rs  reader.rs  scanner.rs
src/presentation/: mod.rs
src/presentation/cli/: commands.rs  mod.rs  progress.rs
src/reassemble/: mod.rs
src/recovery/: carver.rs  carving.rs  mod.rs  reassembly.rs  signatures.rs  validator.rs
src/scan/: mod.rs
src/utils/: format.rs  mod.rs
src/validate/jpeg/: mod.rs
src/validate/png/: mod.rs
tests/: algorithms.rs  analysis_tests.rs  bridge.rs  carving_tests.rs  custody.rs  devices_tests.rs  domain_tests.rs  end_to_end.rs  extraction_integration_tests.rs  extraction_tests.rs  formats_jpeg_tests.rs  formats_png_tests.rs  fs_ext4_tests.rs  fs_fat32_tests.rs  fs_ntfs_tests.rs  infrastructure_tests.rs  integration.rs  integration_tests.rs  io.rs  io_failure_tests.rs  io_tests.rs  proptest_fuzz.rs  scanner_resilience_tests.rs  scoring_tests.rs  security_tests.rs  types_tests.rs
tests/common/: mod.rs
tests/helpers/: mod.rs
