[package]
name = "argos"
version = "0.7.5"
edition = "2021"
authors = ["Breno"]
description = "Professional image recovery tool - specialized in recovering permanently deleted images"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.2"
indicatif = "0.18.3"
anyhow = "1"
thiserror = "2.0.18"
libc = "0.2"
crc32fast = "1"
byteorder = "1"
memchr = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
