[package]
name = "argos"
version = "0.7.5"
edition = "2021"
authors = ["Breno"]
description = "Professional image recovery tool - specialized in recovering permanently deleted images"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.2"
indicatif = "0.18.4"
anyhow = "1.0.102"
libc = "0.2.182"
crc32fast = "1.5.0"
memchr = "2.8.0"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3.25.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
