[package]
name = "argos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
rayon = "1.10"
tokio = { version = "1.44", features = ["sync", "rt", "rt-multi-thread", "macros"] }
parking_lot = "0.12"
bytes = "1.10"
bumpalo = "3.17"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
hex = "0.4"
crc32fast = "1.4"
memmap2 = "0.9"
aho-corasick = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustix = { version = "1.0", features = ["fs", "process"] }
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_System_Threading",
] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.4"

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[profile.release]
panic = "abort"
