[package]
name = "argos-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
argos = { path = ".." }

[workspace]
members = ["."]

[[bin]]
name = "fuzz_jpeg_validate"
path = "fuzz_targets/fuzz_jpeg_validate.rs"
doc = false

[[bin]]
name = "fuzz_png_validate"
path = "fuzz_targets/fuzz_png_validate.rs"
doc = false

[[bin]]
name = "fuzz_scan_block"
path = "fuzz_targets/fuzz_scan_block.rs"
doc = false

[[bin]]
name = "fuzz_entropy"
path = "fuzz_targets/fuzz_entropy.rs"
doc = false
