[package]
name = "argos-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.argos]
path = ".."

[[bin]]
name = "fuzz_jpeg"
path = "fuzz_targets/fuzz_jpeg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_png"
path = "fuzz_targets/fuzz_png.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ssd_scan"
path = "fuzz_targets/fuzz_ssd_scan.rs"
test = false
doc = false
bench = false
