[package]
name = "argos"
description = "CLI application for Argos image recovery tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "argos"
path = "src/main.rs"

[dependencies]
argos_core = { path = "../argos_core" }
argos_io = { path = "../argos_io" }
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"
indicatif = "0.18.3"
humansize = "2.1.3"
ctrlc = "3.5.1"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
dashmap = "6.1.0"

[dev-dependencies]
tempfile = "3.24.0"


