[package]
name = "argos_core"
description = "Core domain definitions and traits for Argos tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = "2.0.17"
memchr = "2.7.6"
imagesize = "0.14.0"
rustix = { version = "1.1.3", features = ["fs"] }
memmap2 = "0.9.9"
flate2 = "1.1.8"
libc = "0.2.180"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
tempfile = "3.24.0"

