[package]
name = "argos_io"
description = "I/O infrastructure adapters for Argos forensic tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustix = { version = "1.1.3", features = ["fs"] }
argos_core = { path = "../argos_core" }

[dev-dependencies]
tempfile = "3.8"
