[package]
name = "scav_io"
description = "I/O infrastructure adapters for Scav forensic tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustix = { version = "1.1.3", features = ["fs"] }
scav_core = { path = "../scav_core" }

[dev-dependencies]
tempfile = "3.8"
